{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Shadow",
            "id": "aa0cec8e-7a69-42ff-b727-283171f4b32a",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "25a1490e-36ac-420f-b18e-99f45a7d832e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c65cb922-86d3-4dac-ba2d-9b73ee40a745",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "3rdPerson",
            "id": "ec418896-c920-4e1c-a282-9dbb91393f9f",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "0224e605-a186-4cca-90e4-43a1c4919f15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "98ee58d1-6bde-4a63-9942-0ed7fa4ed967",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0840ac49-8be4-4138-9288-e8969b28b125",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "7d71d3fe-5599-4617-83ba-866673930baa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "7dc0a933-9ec6-445a-a9eb-87b02e8bc23a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.11)",
                    "initialStateCheck": false
                },
                {
                    "name": "OptionsUI",
                    "type": "Button",
                    "id": "0dce063f-ce6d-4256-a1e1-3a716c3b94d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.98)",
                    "initialStateCheck": false
                },
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "351f9e16-86e8-433f-a88d-19fbb94aba19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "05e12644-7977-447e-b5ca-03e6fb3d9ba8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dab13e1-bdfd-4929-9db7-4f1c5a636f34",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "be32d33c-7189-48df-b94f-799048c4451e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f9a8fdb2-bf20-42b6-aa6e-83c15cb044cb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bb72c426-e02a-492c-be27-456f4e3b2390",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bb01a3a9-84c8-4680-9b4f-2014f6e04999",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d25fa7b1-0ded-4b36-a497-09cdf9c54b69",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2d916f2c-6fb6-4334-a5c9-f3d75c969d1a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e3154ba-6c11-467e-b1fb-232197f2348f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a55cb50f-c1f1-4f3a-8223-bd542b3f4027",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "007a0b99-c5d4-47a3-a5ac-74c2ba6a2381",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OptionsUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}